# stdftools

./: CMakeLists.txt  README.md  conanfile.txt
conan/freestdf/: conanfile.py
src/: CMakeLists.txt  dump_records_to_ascii.c  example.cpp  runtests.cpp
